plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.8'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.project'
version = '0.0.1-SNAPSHOT'
description = 'Project for StudyHub'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-security'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	// Lombok
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	// Database
	runtimeOnly 'org.postgresql:postgresql'

	// JWT
	implementation 'io.jsonwebtoken:jjwt-api:0.13.0'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.13.0'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.13.0'
	// swagger
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.13'

	// Hibernate Spatial: PostGIS의 GEOMETRY 타입을 JPA Entity에 매핑하기 위해 필수
	implementation 'org.hibernate.orm:hibernate-spatial:6.4.4.Final' // hibernate-spatial -> hibernate.orm:hibernate-spatial
    // WebClient 의존성
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    // websocket
    implementation 'org.springframework.boot:spring-boot-starter-websocket'
	// Web Push: 서버에서 VAPID 인증 및 푸시 메시지 전송을 위해 필수
	// N.B. VAPID 인증 및 메시지 암호화/전송을 위한 적절한 라이브러리 선택
    implementation 'nl.martijndwars:web-push:5.1.1'      // 버전은 최신으로 맞춰도 됨
    implementation 'org.bouncycastle:bcprov-jdk15on:1.70' // ECDSA 암호화용

}

tasks.named('test') {
	useJUnitPlatform()
}

// QueryDSL 컴파일 결과(Q-Type) 생성 위치 설정
sourceSets {
	main {
		java {
			srcDirs = ["$buildDir/generated/querydsl", "src/main/java"]
		}
	}
}
